# ep2023-programme-notifications

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint-test.yml
src/programme_notifier/: __init__.py
src/programme_notifier/domain/: __init__.py  conference.py  discord.py
tests/: __init__.py  conftest.py  test_initial.py
tests/domain/: __init__.py  test_create_embed_from_session.py
