[tool.poetry]
name = "ep2023-programme-notifications"
version = "0.1.0"
description = "Send Programme Notifications to Discord Webhooks for EuroPython 2023"
authors = ["Sebastiaan Zeeff <sebastiaan@europython.eu>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "programme_notifier", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.1.0"
arrow = "^1.2.3"
tzdata = "^2023.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
coverage = {extras = ["toml"], version = "^7.2.7"}

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
files = ["**/*.py"]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true


[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
